# swiss-ip-mcp

./: CHANGELOG.md  CONTRIBUTING.de.md  CONTRIBUTING.md  README.de.md  README.md  README_EN.md  claude_desktop_config.json  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/swiss_ip_mcp/: __init__.py  server.py
tests/: test_server.py
