[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "swiss-ip-mcp"
version = "1.0.0"
description = "MCP server for Swiss intellectual property data (trademarks, patents, SPC) via the IGE/IPI Swissreg API"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.3.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[project.scripts]
swiss-ip-mcp = "swiss_ip_mcp.server:main"

[project.urls]
Homepage = "https://github.com/malkreide/swiss-ip-mcp"
Repository = "https://github.com/malkreide/swiss-ip-mcp"
Issues = "https://github.com/malkreide/swiss-ip-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/swiss_ip_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
