[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "swiss-ip-mcp"
version = "1.0.0"
description = "MCP server for Swiss intellectual property data (trademarks, patents, SPC) via the IGE/IPI Swissreg API"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = ["mcp", "model-context-protocol", "swiss", "ip", "trademark", "patent", "ige", "ipi", "swissreg", "llm"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
]

[project.scripts]
swiss-ip-mcp = "swiss_ip_mcp.server:main"

[project.urls]
Homepage = "https://github.com/malkreide/swiss-ip-mcp"
Repository = "https://github.com/malkreide/swiss-ip-mcp"
"Bug Tracker" = "https://github.com/malkreide/swiss-ip-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/swiss_ip_mcp"]

[tool.ruff]
line-length = 120
include = ["src/**/*.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.pytest.ini_options]
markers = [
    "live: marks tests as live integration tests (deselect with '-m \"not live\"')",
]
